[tool.poetry]
name = "allennlp-NER"
version = "0.1.0"
description = ""
authors = ["himkt <himkt@cookpad.com>"]

[tool.poetry.dependencies]
python = "^3.7"
allennlp = {git = "https://github.com/allenai/allennlp", rev = "master"}
allennlp-models = "^1.0.0-rc.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.770"
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
